# RedditBot

./: .env  .env.example  .env.production.example  ADVANCED_TYPING_SIMULATOR.md  AI_FEATURES_JOURNEY_MAPS.md  API_TESTING_INFRASTRUCTURE_AUDIT.md  API_TESTING_INFRASTRUCTURE_AUDIT_FINAL.md  APPLE_INSPIRED_DESIGN_SYSTEM.md  AUDIT_REPORT_AND_ROADMAP.md  BACKEND_INTEGRATION_COMPLETE.md  CODE_QUALITY_AUDIT_REPORT.md  COMPREHENSIVE_AI_CONVERSATION_SYSTEM_ARCHITECTURE.md  COMPREHENSIVE_BACKEND_TO_FRONTEND_MAPPING.md  COMPREHENSIVE_SYSTEM_AUDIT_FINDINGS.md  DATABASE_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.gpu  Dockerfile.telegram  EMOTIONAL_INTELLIGENCE_IMPLEMENTATION.md  FINAL_PRODUCTION_DEPLOYMENT_CHECKLIST.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_PRODUCTION_VALIDATION.json  FINAL_SECURITY_CLEARANCE_REPORT.md  GROUP_CHAT_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  KELLY_AI_CONVERSATION_MANAGEMENT_IMPLEMENTATION_PLAN.md  KELLY_API_ENDPOINTS_IMPLEMENTATION.md  KELLY_BRAIN_SYSTEM.md  KELLY_CLAUDE_DEPLOYMENT_GUIDE.md  KELLY_IMPLEMENTATION_COMPLETE.md  KELLY_MONITORING_SYSTEM.md  LLM_INTEGRATION_GUIDE.md  NEURAL_DREAMS_IMPLEMENTATION.md  PERFORMANCE_AUDIT_EXECUTIVE_SUMMARY.md  PERFORMANCE_AUDIT_REPORT.md  PERSONALITY_SYSTEM.md  PROACTIVE_ENGAGEMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.json  PRODUCTION_DEPLOYMENT_GUIDE.md  (+76 more)
.github/workflows/: ci-cd.yml
app/: __init__.py  cli.py  main.py
app/api/: __init__.py
app/cli/: database.py
app/config/: __init__.py  kelly_ai_config.py  settings.py  telegram_config.py
app/core/: __init__.py  advanced_cache.py  auth.py  circuit_breaker.py  database_optimization.py  monitoring.py  performance_utils.py  redis.py  retry_mechanism.py  secrets.py  secrets_manager.py  security.py  security_utils.py
app/database/: __init__.py  base.py  connection.py  init_db.py  manager.py  repositories.py  repository.py  stripe_repository.py
app/middleware/: __init__.py  error_handling.py  input_validation.py  rate_limiting.py  request_logging.py  security_headers.py
app/models/: __init__.py  analytics.py  audit.py  consciousness.py  conversation.py  digital_telepathy.py  emotional_intelligence.py  engagement.py  group_session.py  kelly_analytics.py  kelly_crm.py  kelly_intelligence.py  kelly_monitoring.py  memory_palace.py  meta_reality.py  neural_dreams.py  personality.py  quantum_consciousness.py  reality_synthesis.py  risk_assessment.py  sharing.py  stripe_models.py  synesthesia.py  system_config.py  telegram_account.py  telegram_community.py  telegram_conversation.py  temporal_archaeology.py  temporal_dilution.py  transcendence.py  user.py
app/schemas/: user.py  (+9 more)
design-system/: apple-design-system.md  component-library.css  interface-designs.md  ui-showcase.html
frontend/: .env.example  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
k8s/: configmap-production.yaml  configmap.yaml  deployment-production.yaml  deployment.yaml  namespace.yaml  pv-pvc.yaml  secrets.yaml  service-production.yaml  service.yaml  statefulset.yaml
migrations/: add_viral_sharing_tables.py  env.py
scripts/: build.sh  deploy.sh  migrate_secrets.py  security_validation.py  telegram_init.py
tests/: conftest.py  factories.py  test_api_integration.py  test_database_operations.py  test_end_to_end_journeys.py  test_engagement_analyzer.py  test_enhanced_voice_processing.py  test_external_service_mocks.py  test_group_manager.py  test_performance_load.py  test_personality_system.py  test_redis_integration.py  test_typing_simulator.py  test_viral_engine.py  test_voice_processing.py
(+259 files in other folders)
